...
                    )
                },
                title = stringResource(id = R.string.add_card)
            )
        }, containerColor = MaterialTheme.colorScheme.background, snackbarHost = {
            DefaultSnackbar(
                modifier = Modifier.testTag("snack_bar"),
                snackbarHostState = snackbarHostState,
                onDismiss = { snackbarHostState.currentSnackbarData?.dismiss() },
            )
        },
        bottomBar = {
            Button(
                modifier = Modifier
                    .testTag("save_card_btn")
                    .fillMaxWidth()
                    .padding(16.dp), shape = MaterialTheme.shapes.extraSmall,
                enabled = (state.card.originalText.isNotBlank() && state.card.translateText.isNotBlank() && state.card.originalLanguages.key.isNotBlank()),
                onClick = { event.invoke(CardAddingContract.Event.SaveCardEvent) }) {
                ResizableTextView(
                    text = stringResource(R.string.save_card),
...
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.spacedBy(16.dp)
            ) {
                InfoTextFiled(
                    modifier = Modifier
                        .weight(0.8f)
                        .testTag("original_text_field")
                        .focusRequester(originalFocusRequester),
                    value = state.card.originalText,
                    onValueChange = onOriginalTextChange,
                    hint = stringResource(
                        id = R.string.Add_card_text_here
                    ),
...
                    }
                } else {
                    InfoTextFiled(
                        modifier = Modifier
                            .weight(0.8f)
                            .padding(top = 16.dp, bottom = 16.dp)
                            .testTag("translate_text_field")
                            .focusRequester(translateFocusRequester),
                        value = state.card.translateText,
                        onValueChange = onTranslationTextChange,
                        hint = stringResource(
                            id = R.string.add_translate_text_here
                        ),
...
            }


            OutlinedButton(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("online_translate_tag"),
                onClick = { event.invoke(CardAddingContract.Event.OnlineTranslateEvent)
                    keyboardController?.hide()}) {
                Row(
                    horizontalArrangement = Arrangement.spacedBy(4.dp),
                    modifier = Modifier.height(IntrinsicSize.Min)
                ) {
...
